--- a/src/TO/TestBundle/Resources/views/Misc/get_routing_name.html.twig
+++ b/src/TO/TestBundle/Resources/views/Misc/get_routing_name.html.twig
@@ -1,2 +1,4 @@
-routing name(contoller): {{ route }}<br />
-routing name(twig): {{ app.request.get('_route') }}
+<ul>
+    <li>routing name(contoller): <b id="controller">{{ route }}</b></li>
+    <li>routing name(twig): <b id="twig">{{ app.request.get('_route') }}</b></li>
+</ul>
